syntax = "proto3";
package arkeo.arkeo;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "arkeo/keeper.proto";

option go_package = "github.com/arkeonetwork/arkeo/x/arkeo/types";

// Msg defines the Msg service.
service Msg {
  rpc BondProvider(MsgBondProvider) returns (MsgBondProviderResponse);
  rpc ModProvider(MsgModProvider) returns (MsgModProviderResponse);
  rpc OpenContract(MsgOpenContract) returns (MsgOpenContractResponse);
  rpc CloseContract(MsgCloseContract) returns (MsgCloseContractResponse);
  rpc ClaimContractIncome(MsgClaimContractIncome)
      returns (MsgClaimContractIncomeResponse);
  // this line is used by starport scaffolding # proto/tx/rpc
}

message MsgBondProvider {
  string creator = 1;
  string pub_key = 2 [ (gogoproto.casttype) = "github.com/arkeonetwork/arkeo/common.PubKey" ];
  string chain = 3;
  string bond = 4 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}

message MsgBondProviderResponse {}

message MsgModProvider {
  string creator = 1;
  string pub_key = 2 [ (gogoproto.casttype) = "github.com/arkeonetwork/arkeo/common.PubKey" ];
  string chain = 3;
  string metadataURI = 4;
  uint64 metadataNonce = 5;
  ProviderStatus status = 6;
  int64 minContractDuration = 7;
  int64 maxContractDuration = 8;
  int64 subscriptionRate = 9;
  int64 payAsYouGoRate = 10;
}

message MsgModProviderResponse {}

message MsgOpenContract {
  string creator = 1;
  string pub_key = 2 [ (gogoproto.casttype) = "github.com/arkeonetwork/arkeo/common.PubKey" ];
  string chain = 3;
  string client = 4 [ (gogoproto.casttype) = "github.com/arkeonetwork/arkeo/common.PubKey" ];
  string delegate = 5 [ (gogoproto.casttype) = "github.com/arkeonetwork/arkeo/common.PubKey" ];
  ContractType cType = 6;
  int64 duration = 7;
  int64 rate = 8;
  string deposit = 9 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}

message MsgOpenContractResponse {}

message MsgCloseContract {
  string creator = 1;
  string pub_key = 2 [ (gogoproto.casttype) = "github.com/arkeonetwork/arkeo/common.PubKey" ];
  string chain = 3;
  string client = 4 [ (gogoproto.casttype) = "github.com/arkeonetwork/arkeo/common.PubKey" ];
  string delegate = 5 [ (gogoproto.casttype) = "github.com/arkeonetwork/arkeo/common.PubKey" ];
}

message MsgCloseContractResponse {}

message MsgClaimContractIncome {
  string creator = 1;
  string pub_key = 2 [ (gogoproto.casttype) = "github.com/arkeonetwork/arkeo/common.PubKey" ];
  string chain = 3;
  string spender = 4 [ (gogoproto.casttype) = "github.com/arkeonetwork/arkeo/common.PubKey" ];
  bytes signature = 5;
  int64 nonce = 6;
  int64 height = 7;
}

message MsgClaimContractIncomeResponse {}

// this line is used by starport scaffolding # proto/tx/message
